--- a/notebook/final.ipynb
+++ b/notebook/final.ipynb
@@ -14,7 +14,11 @@
     "# conda install -c conda-forge cartopy\n",
     "\n",
     "# eccodes\n",
-    "# on linux: sudo apt-get install libeccodes0"
+    "# on linux: sudo apt-get install libeccodes0\n",
+    "\n",
+    "# if not using the API to access data (login required)\n",
+    "# place the download.grib file in this directory so that the\n",
+    "# notebook can access the data correctly"
    ]
   },
   {
